[gd_scene load_steps=16 format=3 uid="uid://dwrcdhdwb121l"]

[ext_resource type="Script" path="res://scripts/enemy_ghost.gd" id="1_ehkxs"]
[ext_resource type="Texture2D" uid="uid://cgx0iqiqli2n7" path="res://img/enemy_ghost_spritesheet.png" id="2_s8hgf"]
[ext_resource type="AudioStream" uid="uid://bj8rxdhil5kqy" path="res://audio/sfx/enemy_ghost.ogg" id="3_7w7n6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j5wux"]
atlas = ExtResource("2_s8hgf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_42fps"]
atlas = ExtResource("2_s8hgf")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv8ix"]
atlas = ExtResource("2_s8hgf")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_br2h4"]
atlas = ExtResource("2_s8hgf")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl8t1"]
atlas = ExtResource("2_s8hgf")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhhbw"]
atlas = ExtResource("2_s8hgf")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgjt0"]
atlas = ExtResource("2_s8hgf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nygk5"]
atlas = ExtResource("2_s8hgf")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm8po"]
atlas = ExtResource("2_s8hgf")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_mdmnn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5wux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42fps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv8ix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br2h4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl8t1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhhbw")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgjt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nygk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm8po")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5uuuw"]
radius = 0.35
height = 0.9

[sub_resource type="SphereShape3D" id="SphereShape3D_fmqw2"]
radius = 0.6

[node name="EnemyGhost" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 7
motion_mode = 1
script = ExtResource("1_ehkxs")
health = 15
base_damage = 10
move_speed = 8.0
attack_range = 7.5
attack_cooldown = 3.0

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0694781, 0)
pixel_size = 0.02
billboard = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_mdmnn")
animation = &"attack"
autoplay = "idle"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_5uuuw")

[node name="AttackArea" type="Area3D" parent="."]
collision_layer = 4
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
shape = SubResource("SphereShape3D_fmqw2")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
bus = &"SFX"

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_7w7n6")
volume_db = -30.0
pitch_scale = 0.3
autoplay = true
bus = &"SFX"

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
